fix spacing of profile image on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,9 @@ footer ul li:after {
   .contact-content ul li {
    margin: 1em auto;
   }
+  .profile img {
+    margin-top: 25%;
+  }
   footer ul {
     margin: 0 0;
   }
